[package]
name = "curl-rsl"
version = "0.1.0"
authors = ["XS <tonycody@qq.com>"]
license = "Apache-2.0"
repository = "https://github.com/xs-fork/curl-rs"
homepage = "https://github.com/xs-fork/curl-rs"
documentation = "https://docs.rs/curl-rsl"
description = "Native bindings to the libssh2 library"
categories = ["command-line-utilities"]
keywords = ["curl"]

[lib]
name = "curl"
crate_type = ["rlib"]
path = "src/lib.rs"
